--- a/style.css
+++ b/style.css
@@ -11,9 +11,15 @@ body{
     "e e"
     "n o"
     "c o";
+    padding: 8px;
 }
 
 #ecran{grid-area: "e";}
 #nombres{grid-area: "n";}
 #operateur{grid-area: "o";}
 #commandes{grid-area:"c";}
+
+footer{
+    background-color: grey;
+    margin-top: 10px;
+}
