--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: "black";
+    background-color: black;
 }
 
 #calculatrice{
@@ -27,10 +27,6 @@ body{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas: 
-    "1 2 3"
-    "4 5 6"
-    "7 8 9";
 }
 
 #operateur{
@@ -46,6 +42,11 @@ body{
     "+";
 }
 
+#division{grid-area: "/";}
+#multiplication{grid-area: "X";}
+#soustraction{grid-area: "-";}
+#addition{grid-area: "+";}
+
 #commandes{
     grid-area:"c";
     background-color: chocolate;
@@ -54,6 +55,10 @@ body{
     grid-template-rows: 1fr;
     grid-template-areas: "0 . AC";
 }
+
+#zero{grid-area: "0";}
+#virgule{grid-area: ".";}
+#AC{grid-area: "AC";}
 
 footer{
     background-color: grey;
