modification des grid pour une meilleur répartition

--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body{
 #calculatrice{
     background-color: darkgrey;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 75% 25%;
+    grid-template-rows: 25% 56.25% 18.75%;
     grid-template-areas: 
     "e e"
     "n o"
