--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
 
 #calculatrice{
     background-color: darkgrey;
+    min-height: 400px;
     display: grid;
     grid-template-columns: 75% 25%;
     grid-template-rows: 25% 56.25% 18.75%;
