--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     min-height: 400px;
     display: grid;
     grid-template-columns: 75% 25%;
-    grid-template-rows: 1fr auto auto;
+    grid-template-rows: 25% auto auto;
     grid-template-areas: 
     "ecran ecran"
     "nbrs operateurs"
