--- a/style.css
+++ b/style.css
@@ -24,11 +24,12 @@ body{
     background-color: blueviolet;
     min-height: 80%;
     min-width: 80%;
+    padding-left: 4px;
 }
 
 #ecran p{
     font-family: monospace;
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     letter-spacing: 4px;
     color: orange;
 }
