--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body{
     background-color: blueviolet;
     min-height: 80%;
     min-width: 80%;
+    display: flex;
+    justify-content: start;
 }
 
 #ecran p{
